adding more button behavior/labels etc.. needs cleanup

--- a/aedit3/aedit3.csproj
+++ b/aedit3/aedit3.csproj
@@ -54,11 +54,12 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <StartupObject />
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classes\Core\ImageProcessor.cs" />
@@ -88,7 +89,9 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\aedit3.mgcb" />
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
