more work on textinput and.. uh.. starfield?

--- a/aedit3/aedit3.csproj
+++ b/aedit3/aedit3.csproj
@@ -63,6 +63,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classes\Core\ImageProcessor.cs" />
+    <Compile Include="Classes\Ex\Starfield.cs" />
     <Compile Include="Classes\UI\BitmapFont.cs" />
     <Compile Include="Classes\UI\FontManager.cs" />
     <Compile Include="Classes\UI\UIButton.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Classes\UI\UIManager.cs" />
     <Compile Include="Classes\UI\UIRect.cs" />
     <Compile Include="Classes\UI\UISprite.cs" />
+    <Compile Include="Classes\UI\UITextInput.cs" />
     <Compile Include="Classes\UI\UIWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
