created base entity class.. may regret this push in the morning

--- a/aedit3/aedit3.csproj
+++ b/aedit3/aedit3.csproj
@@ -62,7 +62,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Classes\Core\Entity.cs" />
     <Compile Include="Classes\Core\ImageProcessor.cs" />
+    <Compile Include="Classes\Core\TileMap.cs" />
     <Compile Include="Classes\Ex\Starfield.cs" />
     <Compile Include="Classes\UI\BitmapFont.cs" />
     <Compile Include="Classes\UI\FontManager.cs" />
