--- a/aedit3/idraw/IDraw3.ini
+++ b/aedit3/idraw/IDraw3.ini
@@ -184,22 +184,22 @@ Center=2
 Snap=4
 [FileDialog]
 HC=10
-H0=C:\My Documents\My Pictures\update\
+H0=C:\annaboo\aedit3\aedit3\Content\
 Height=282
-InitialDir=C:\My Documents\My Pictures\update\
+InitialDir=C:\annaboo\aedit3\aedit3\Content\
 FilterIndex=1
 Left=307
 Top=238
-H1=C:\rpg2000\Project\Phylo2\Picture\
+H1=C:\My Documents\My Pictures\update\
 Options=4102
-H2=C:\My Documents\My Pictures\update\sq\
-H3=C:\rpg2003\Project\Phylo1\Picture\
-H4=C:\rpg2003\Project\Phylo1\FaceSet\
-H5=C:\rpg2003\Project\Phylo1\Backdrop\
-H6=C:\rpg2003\Project\Phylo1\Battle\
-H7=C:\My Documents\My Pictures\
-H8=C:\rpg2003\Project\Phylo1\System\
-H9=C:\rpg2003\Project\Phylo1\Monster\
+H2=C:\rpg2000\Project\Phylo2\Picture\
+H3=C:\My Documents\My Pictures\update\sq\
+H4=C:\rpg2003\Project\Phylo1\Picture\
+H5=C:\rpg2003\Project\Phylo1\FaceSet\
+H6=C:\rpg2003\Project\Phylo1\Backdrop\
+H7=C:\rpg2003\Project\Phylo1\Battle\
+H8=C:\My Documents\My Pictures\
+H9=C:\rpg2003\Project\Phylo1\System\
 [NewDibDialog]
 Else=64
 Palette=
@@ -280,7 +280,7 @@ TabSpace=5
 [ChangePaletteDialog]
 LastButton=RBInvert
 [NewSizeDialog]
-Size=308,60
+Size=1024,1024
 [SBFonts]
 HC=10
 H0=Tahoma,8,0,0
