--- a/aedit3/idraw/IDraw3.ini
+++ b/aedit3/idraw/IDraw3.ini
@@ -1,7 +1,7 @@
 [MainForm]
-Place=1,63,43,1028,684
-NColor1=37
-NColor2=255
+Place=1,241,78,1206,719
+NColor1=14
+NColor2=3
 NPen1=0
 NPen2=1
 PenWidths=1,2,3,4,5,10,15,20,30,40,50,60,80,100
@@ -13,8 +13,8 @@ DitherIcon=0
 IconSaveColor=1
 IDIconMaskBottomLeftPixel=0
 PalChangeable=1
-FileName=C:\My Documents\My Pictures\update\Castle-01.png
-GridSize=96,96
+FileName=C:\annaboo\aedit3\aedit3\Content\ui.bmp
+GridSize=8,8
 DefRectOpt=0
 AskWhenDestroy=1
 Backup=0
@@ -26,13 +26,13 @@ Timer=200
 UndoBuffer=10000000
 RMenuMode=1
 DotLineVisible=1
-DotLineWidth=96
-DotLineHeight=96
+DotLineWidth=8
+DotLineHeight=8
 MeasureType=1
-ZoomSize=8
+ZoomSize=2
 Mouse=MIFillRect
 AutoScroll=1
-ScrollerPos=203,41
+ScrollerPos=0,0
 ScrollerVisible=1
 [EditMoveMenu]
 M0=PIEditSelectAll
@@ -64,7 +64,7 @@ MIColor2=50
 MIZoomIn=90
 MIZoomOut=88
 MIMeasureType=76
-MIRDraw=82
+MIRDraw=0
 MISelectPenColor=219
 MISelectPenMode=221
 MIScreenColor1=32817
@@ -72,7 +72,7 @@ MIScreenColor2=32818
 MIAddCursorColor=0
 MIDeleteCursorColor=52
 MIPopup=53
-MISelectRect=0
+MISelectRect=86
 MISelectEllipse=0
 MISelectParallelogram=0
 MISelectTriangle=0
@@ -81,14 +81,14 @@ MISelectRegion=0
 MISelectBorder=0
 MISelectSurface=0
 MISelectColors=0
-MIDrawDot=0
+MIDrawDot=66
 MIDrawLine=0
 MIDrawRect=0
-MIFillRect=0
+MIFillRect=82
 MIDrawEllipse=0
 MIFillEllipse=0
 MIDrawEdge=0
-MIFill=0
+MIFill=75
 MIDrawSpray=0
 MIDrawBezier=0
 MIAnimation=70
@@ -156,22 +156,23 @@ Max=10
 C=0
 [GridHistory]
 Max=10
-C=2
-S0=24,32
-S1=32,32
+C=3
+S0=96,96
+S1=24,32
+S2=32,32
 [FileHistory]
 Max=10
 C=10
-S0=C:\My Documents\My Pictures\update\Castle-01.png
-S1=C:\My Documents\My Pictures\update\caveQ.png
-S2=C:\rpg2000\Project\Phylo2\Picture\access.bmp
-S3=C:\My Documents\My Pictures\update\Castle-Courtyard-03.png
-S4=C:\My Documents\My Pictures\update\bc078-2.png
-S5=C:\My Documents\My Pictures\update\WildArms_dungeon2.png
-S6=C:\My Documents\My Pictures\update\bc77-2.png
-S7=C:\My Documents\My Pictures\update\bc76-2.png
-S8=C:\My Documents\My Pictures\update\bc75-2.png
-S9=C:\My Documents\My Pictures\update\bc74-2.png
+S0=C:\annaboo\aedit3\aedit3\Content\ui.bmp
+S1=C:\annaboo\aedit3\aedit3\Content\uitester.bmp
+S2=C:\annaboo\aedit3\aedit3\Content\tiles.bmp
+S3=C:\My Documents\My Pictures\update\Castle-01.png
+S4=C:\My Documents\My Pictures\update\caveQ.png
+S5=C:\rpg2000\Project\Phylo2\Picture\access.bmp
+S6=C:\My Documents\My Pictures\update\Castle-Courtyard-03.png
+S7=C:\My Documents\My Pictures\update\bc078-2.png
+S8=C:\My Documents\My Pictures\update\WildArms_dungeon2.png
+S9=C:\My Documents\My Pictures\update\bc77-2.png
 [ShiftState]
 Scroll=2
 Move=4
@@ -231,16 +232,16 @@ Top=243
 [IconForm]
 Place=1,154,154,112,335
 [ToolForm]
-Place=1,566,275,624,513
+Place=1,1239,249,1297,494
 [PenForm]
 Place=0,345,230,576,317
 [PaletteForm]
-Place=1,358,202,589,477
+Place=1,1047,495,1278,777
 ToolBar=1
 [OptionForm]
 Place=0,661,407,892,495
 [ShiftForm]
-Place=1,282,446,513,553
+Place=0,188,297,419,408
 HorzShift=1
 VertShift=0
 [HorzShiftButton]
@@ -256,7 +257,7 @@ Else=999
 Palette=
 Last=RBPalette
 [PlaceForm]
-Place=1,513,283,824,472
+Place=1,651,217,962,406
 AutoScroll=1
 ScrollerPos=0,0
 ScrollerVisible=1
@@ -264,7 +265,7 @@ Stretch=1
 VisibleRect=1
 ZoomSize=1
 [AnimationForm]
-Place=1,295,368,472,556
+Place=0,197,245,374,433
 Interval=78
 Tile=0
 Zoom=1
@@ -272,7 +273,7 @@ Zoom=1
 Max=10
 C=0
 [TextForm]
-Place=1,140,304,331,509
+Place=0,440,415,631,620
 TextFont=Tahoma,8,0,0
 Memo=Tahoma,8,0,0
 Alignment=0
