--- a/aedit3/idraw/IDraw3.ini
+++ b/aedit3/idraw/IDraw3.ini
@@ -1,6 +1,6 @@
 [MainForm]
-Place=1,241,78,1206,719
-NColor1=14
+Place=3,582,196,1073,825
+NColor1=0
 NColor2=3
 NPen1=0
 NPen2=1
@@ -13,7 +13,7 @@ DitherIcon=0
 IconSaveColor=1
 IDIconMaskBottomLeftPixel=0
 PalChangeable=1
-FileName=C:\annaboo\aedit3\aedit3\Content\ui.bmp
+FileName=C:\annaboo\aedit3\aedit3\Content\tiles.bmp
 GridSize=8,8
 DefRectOpt=0
 AskWhenDestroy=1
@@ -30,9 +30,9 @@ DotLineWidth=8
 DotLineHeight=8
 MeasureType=1
 ZoomSize=2
-Mouse=MIFillRect
+Mouse=MISelectRect
 AutoScroll=1
-ScrollerPos=0,0
+ScrollerPos=85,10
 ScrollerVisible=1
 [EditMoveMenu]
 M0=PIEditSelectAll
@@ -82,7 +82,7 @@ MISelectBorder=0
 MISelectSurface=0
 MISelectColors=0
 MIDrawDot=66
-MIDrawLine=0
+MIDrawLine=78
 MIDrawRect=0
 MIFillRect=82
 MIDrawEllipse=0
@@ -156,23 +156,24 @@ Max=10
 C=0
 [GridHistory]
 Max=10
-C=3
-S0=96,96
-S1=24,32
-S2=32,32
+C=4
+S0=16,16
+S1=96,96
+S2=24,32
+S3=32,32
 [FileHistory]
 Max=10
 C=10
-S0=C:\annaboo\aedit3\aedit3\Content\ui.bmp
-S1=C:\annaboo\aedit3\aedit3\Content\uitester.bmp
-S2=C:\annaboo\aedit3\aedit3\Content\tiles.bmp
-S3=C:\My Documents\My Pictures\update\Castle-01.png
-S4=C:\My Documents\My Pictures\update\caveQ.png
-S5=C:\rpg2000\Project\Phylo2\Picture\access.bmp
-S6=C:\My Documents\My Pictures\update\Castle-Courtyard-03.png
-S7=C:\My Documents\My Pictures\update\bc078-2.png
-S8=C:\My Documents\My Pictures\update\WildArms_dungeon2.png
-S9=C:\My Documents\My Pictures\update\bc77-2.png
+S0=C:\annaboo\aedit3\aedit3\Content\tiles.bmp
+S1=C:\annaboo\aedit3\aedit3\Content\ui.bmp
+S2=C:\annaboo\aedit3\aedit3\Content\font.bmp
+S3=C:\annaboo\aedit3\aedit3\Content\palette.bmp
+S4=C:\annaboo\aedit3\aedit3\Content\uitester.bmp
+S5=C:\My Documents\My Pictures\update\Castle-01.png
+S6=C:\My Documents\My Pictures\update\caveQ.png
+S7=C:\rpg2000\Project\Phylo2\Picture\access.bmp
+S8=C:\My Documents\My Pictures\update\Castle-Courtyard-03.png
+S9=C:\My Documents\My Pictures\update\bc078-2.png
 [ShiftState]
 Scroll=2
 Move=4
@@ -186,7 +187,7 @@ Snap=4
 [FileDialog]
 HC=10
 H0=C:\annaboo\aedit3\aedit3\Content\
-Height=282
+Height=615
 InitialDir=C:\annaboo\aedit3\aedit3\Content\
 FilterIndex=1
 Left=307
@@ -232,11 +233,11 @@ Top=243
 [IconForm]
 Place=1,154,154,112,335
 [ToolForm]
-Place=1,1239,249,1297,494
+Place=1,1422,344,1480,589
 [PenForm]
 Place=0,345,230,576,317
 [PaletteForm]
-Place=1,1047,495,1278,777
+Place=1,1133,480,1364,597
 ToolBar=1
 [OptionForm]
 Place=0,661,407,892,495
@@ -257,7 +258,7 @@ Else=999
 Palette=
 Last=RBPalette
 [PlaceForm]
-Place=1,651,217,962,406
+Place=1,1358,260,1669,449
 AutoScroll=1
 ScrollerPos=0,0
 ScrollerVisible=1
@@ -265,10 +266,10 @@ Stretch=1
 VisibleRect=1
 ZoomSize=1
 [AnimationForm]
-Place=0,197,245,374,433
-Interval=78
+Place=1,995,580,1364,951
+Interval=120
 Tile=0
-Zoom=1
+Zoom=4
 [AnmHistory]
 Max=10
 C=0
